# mm-dlp

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dev_guide.md  llm_context.xml  rust-toolchain.toml  uniffi.toml
.cargo/: config.toml
.github/workflows/: release.yml
bindings/: mmdlp.swift  mmdlpFFI.h  mmdlpFFI.modulemap
bindings/c/: mm_dlp.h
bindings/csharp/: MmDlp.cs
bindings/dart/: mm_dlp.dart
bindings/java/: MmDlp.java
bindings/jquery/: app.js
bindings/kotlin/: MmDlp.kt
bindings/node/: index.js  index.ts
bindings/python/: mm_dlp.py
bindings/react/: useMmDlp.js
bindings/uniffi/mmdlp/: mmdlp.kt
mm-dlp-cli/: Cargo.toml
mm-dlp-cli/src/: main.rs
mm-dlp-core/: Cargo.toml  build.rs
mm-dlp-core/benches/: download_benchmark.rs  downloader_bench.rs  js_bench.rs  json_parsing.rs  playlist_parsing_benchmark.rs  workspace_bench.rs
mm-dlp-core/src/: config.rs  engine.rs  error.rs  lib.rs  mm-dlp.udl  platforms.rs  playlist.rs  pool.rs  processor.rs  resolver.rs  server.rs  utils.rs
mm-dlp-core/src/client/: cookies.rs  h2.rs  h3.rs  mod.rs  tls.rs
mm-dlp-core/src/data/: mod.rs  router.rs
mm-dlp-core/src/data/extractors/: mod.rs  soundcloud.rs  youtube.rs
mm-dlp-core/src/data/playlist/: json_handler.rs  mod.rs  xml_handler.rs
mm-dlp-core/src/data/playlist/tests/: mod.rs  serialization_test.rs
mm-dlp-core/src/domain/: extractor.rs  mod.rs  models.rs  playlist.rs
mm-dlp-core/src/download/: chunker.rs  manager.rs  mod.rs
mm-dlp-core/src/download/tests/: chunker_test.rs  mod.rs
mm-dlp-core/src/downloader/: flusher.rs  manifest.rs  mmap.rs  mod.rs  parallel.rs
mm-dlp-core/src/extractor/: mod.rs  registry.rs  soundcloud.rs  spotify.rs  traits.rs  youtube.rs
mm-dlp-core/src/ffi/: api.rs  config.rs  file_handoff.rs  mod.rs  types.rs
mm-dlp-core/src/ffi/tests/: handoff_test.rs  mod.rs  type_conversion_test.rs
mm-dlp-core/src/js/: decipher.rs  engine.rs  mod.rs
mm-dlp-core/src/media/: converter.rs  mod.rs  pipeline.rs  tagger.rs
mm-dlp-core/src/media/tests/: converter_test.rs  tagger_test.rs
mm-dlp-core/src/network/: quic_client.rs
mm-dlp-core/src/plugin/: host_imports.rs  manifest.rs  mod.rs
mm-dlp-core/src/postprocessor/: ffmpeg.rs  mod.rs  native_mux.rs
mm-dlp-core/src/uniffi/: mm-dlp.udl
mm-dlp-core/tests/: client_test.rs  download_test.rs  error_test.rs  evasion.rs  extractor_test.rs  mux_test.rs  playlist_roundtrip_test.rs  plugin_test.rs  streaming_test.rs  uniffi_test.rs  workspace_test.rs
scripts/: generate_bindings.sh
src/: lib.rs  main.rs
tests/: evasion.rs
