[workspace]
members = ["mm-dlp-core", "mm-dlp-cli"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uniffi = { version = "0.32", features = ["cli", "build"] }
clap = { version = "4.4", features = ["derive"] }
criterion = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
