[package]
name = "mm-dlp-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "process"] }
reqwest = { version = "0.12", features = ["json", "cookies", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uniffi = { version = "0.28", features = ["cli", "build", "bindgen"] }
once_cell = "1.19"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
