[package]
name = "mm-dlp-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1.37", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "io-util",
    "sync",
    "process",
] }
reqwest = { version = "0.13.4", features = [
    "json",
    "cookies",
    "stream",
    "blocking",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
uniffi = { version = "0.31.1", features = ["cli", "build", "bindgen"] }
once_cell = "1.19"
async-trait = "0.1"
regex = "1.10"
libc = "0.2"
memmap2 = "0.9"
boring = "4.22.0"
quiche = { version = "0.29.1", features = ["boring"] }
rquickjs = { version = "0.12.0" }
wasmer = "7.1.0"
ffmpeg-next = { version = "8.1.0", features = ["build"] }
secret-service = { version = "5.1.0", features = ["rt-tokio-crypto-rust"] }
security-framework = "3.7.0"
windows-sys = { version = "0.61.2", features = [
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
] }
bytes = "1.6"
ed25519-dalek = "2.1"
hex = "0.4"
h2 = "0.4"

[dev-dependencies]
uniffi_bindgen = "0.31.1"
camino = "1.2.2"

[build-dependencies]
uniffi = { version = "0.31.1", features = ["build"] }
