[package]
name = "mm-dlp-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
name = "mm_dlp_core"

[dependencies]
tokio = { version = "1.37", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "io-util",
    "sync",
    "process",
] }
reqwest = { version = "0.13.4", features = [
    "json",
    "cookies",
    "stream",
    "blocking",
    "query",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
uniffi = { version = "0.32.0", features = ["cli", "build", "bindgen"] }
once_cell = "1.19"
async-trait = "0.1"
regex = "1.10"
libc = "0.2"
memmap2 = "0.9"
boring = "4.11.0"
quiche = { version = "0.29.1", features = ["boring"] }
rquickjs = { version = "0.12.0" }
wasmer = "7.1.0"
ffmpeg-next = "8.1.0"
secret-service = { version = "5.1.0", features = ["rt-tokio-crypto-rust"] }
security-framework = "3.7.0"
windows-sys = { version = "0.61.2", features = [
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
] }
bytes = "1.6"
ed25519-dalek = "3.0.0"
hex = "0.4"
h2 = "0.4"
lazy_static = "1.4.0"
actix-web = "4"
surrealdb = { version = "3.0.0-beta.1", default-features = false, features = [
    "kv-mem",
    "kv-surrealkv",
] }
anyhow = "1.0"
urlencoding = "2.1"
quinn = "0.11"
http = "1"
h3 = "0.0.8"
h3-quinn = "0.0.10"
rustls = "0.23.41"
rcgen = "0.14.8"
url = "2.5"
tokio-util = { version = "0.7", features = ["io"] }
rustls-native-certs = "0.8"
lofty = "0.24"
which = "8.0.4"
quick-xml = { version = "0.41.0", features = ["serde", "serialize"] }
futures = "0.3"

[dev-dependencies]
uniffi_bindgen = "0.32.0"
camino = "1.2.2"
criterion = "0.8.2"

[build-dependencies]
uniffi = { version = "0.32.0", features = ["build"] }

[[bench]]
name = "json_parsing"
harness = false

[[bench]]
name = "workspace_bench"
harness = false
